--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
+# Public URL
+PUBLIC_URL=http://localhost:3000
