--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ DATABASE_URL="file:./db.sqlite"
 
 # Public URL
 PUBLIC_URL=http://localhost:3000
+
+# Bank number to copy
+NEXT_PUBLIC_BANK_NUMBER="FI12 3456 7890 1234 56"
